📝 (docker-compose.yaml): add missing environment variables and update database configuration and connection to a custom PostgreSQL database   🏆 Fix the error with incorrect URL for a custom PostgreSQL database and updated the connection options. It is recommended that you set it up on your own.   🔧 Simplified route for the API using Express, now it can be accessed on port 7799.   🚀 Added support for the environment variable `DATABASE_URL` through environment variables in Docker Compose file   🌐 Updated service configurations dynamically by adding parameters to Docker Compose YAML files when the container starts, allowing more flexibility over time.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,13 @@ services:
     environment:
       - 'OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-/ollama}'
       - 'WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY:-Sup3r_S3cr3t_K3y}'
+      - 'DATABASE_URL=${DATABASE_URL:-sqlite:///${DATA_DIR}/webui.db}'
+      - 'ENABLE_OPENAI_API=${ENABLE_OPENAI_API:-false}'
+      - 'OPENAI_API_KEY=${OPENAI_API_KEY:-}'
+      - 'OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL:-https://api.openai.com}'
+      - 'ENABLE_SEARCH_QUERY=${ENABLE_SEARCH_QUERY:-false}'
+      - 'SEARCH_ENGINE=${SEARCH_ENGINE:-searxng}'
+      - 'SEARCH_ENGINE_URL=${SEARCH_ENGINE_URL:-http://searxng.local/search?q=<query>}'
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
