--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,18 +10,24 @@ services:
     volumes:
       - open-webui:/app/backend/data
     environment:
-      - 'OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-/ollama}'
-      - 'WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY:-Sup3r_S3cr3t_K3y}'
-      - 'DATABASE_URL=${DATABASE_URL:-sqlite:///${DATA_DIR}/webui.db}'
-      - 'ENABLE_OPENAI_API=${ENABLE_OPENAI_API:-false}'
-      - 'OPENAI_API_KEY=${OPENAI_API_KEY:-}'
-      - 'OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL:-https://api.openai.com}'
-      - 'ENABLE_SEARCH_QUERY=${ENABLE_SEARCH_QUERY:-false}'
-      - 'SEARCH_ENGINE=${SEARCH_ENGINE:-searxng}'
-      - 'SEARCH_ENGINE_URL=${SEARCH_ENGINE_URL:-http://searxng.local/search?q=<query>}'
-      - 'NODE_OPTIONS="--max-old-space-size=4096"'
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-/ollama}
+      - WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY:-Sup3r_S3cr3t_K3y}
+      - DATABASE_URL=${DATABASE_URL:-sqlite:///${DATA_DIR}/webui.db}
+      - ENABLE_OPENAI_API=${ENABLE_OPENAI_API:-false}
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL:-https://api.openai.com}
+      - ENABLE_SEARCH_QUERY=${ENABLE_SEARCH_QUERY:-false}
+      - SEARCH_ENGINE=${SEARCH_ENGINE:-searxng}
+      - SEARCH_ENGINE_URL=${SEARCH_ENGINE_URL:-http://searxng.local/search?q=<query>}
+      - NODE_OPTIONS=--max-old-space-size=4096
     extra_hosts:
       - host.docker.internal:host-gateway
+
+    deploy:
+      resources:
+        limits:
+          memory: 4G
+          cpus: '1'
     restart: unless-stopped
 
 volumes:
