🚀 (docker-compose.yaml): change "DATA_DIR" to "DATA_DIR" for consistency with the server   🐛 (server.ts): add support for using the USE_OLLAMA and USE_CUDA environment variables via the process.env object for configuration, improving readability
Fix typo in "start" command if necessary. Thank you! 🚀

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
     volumes:
       - open-webui:/app/backend/data
     environment:
+      - DATA_DIR=/app/backend/data
       - USE_OLLAMA=${USE_OLLAMA:-false}
       - USE_CUDA=${USE_CUDA:-false}
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-/ollama}
