chore(deps): update node version due to PR in package.json   💡 (docker-compose.yaml): set database URL env var   📝 (server.ts): update DATABASE_URL env var for proper connection   🔍 (server.ts):(server.ts): add support for process.env.PORT environment variable   🔍 (server.ts): change PORT variable case from lowercase to uppercase to improve semantic meaning "PORT"
  ✨ Fix minor bug in server.ts: ensure that app.isRunning is only set when the root server is running.

  📝 Add a new service for the database connection with env var to avoid conflicts with old ones
  - - + BREAKING change (server.ts) - - Update DATABASE_URL env variables with environment variables

To keep things consistent in case of an update or migration, consider setting DATABASE_URL to an empty string.
This is mostly because:
  📝 Introduce a new service for database connection with env var.

As part of this changes, add the following to update server.ts
  + - `const databaseUrl: string = process.env.DATABASE_URL || ''`

Finally, we've updated src/server.ts and docker-compose.yaml as described above.
Let's merge them into one commit.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - USE_CUDA=${USE_CUDA:-false}
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-/ollama}
       - WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY:-Sup3r_S3cr3t_K3y}
-      - DATABASE_URL=${DATABASE_URL:-sqlite:///${DATA_DIR}/webui.db}
+      # - DATABASE_URL=${DATABASE_URL:-sqlite:///${DATA_DIR}/webui.db}
       - ENABLE_OPENAI_API=${ENABLE_OPENAI_API:-false}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
       - OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL:-https://api.openai.com}
