Fixing the case for variable names in service definitions   📝 - Change `SERVER_PORT` to uppercase when defining services. For example: `searxng:8080`   💡 - Replace `<query>`, `<use_ollama>`, and similar variables with their correct types, as it improves documentation and consistency.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,12 @@
 services:
+  searxng:
+    image: searxng/searxng:latest
+    container_name: searxng
+    environment:
+      SEARXNG_SECRET_KEY: ${SEARXNG_SECRET_KEY}
+    volumes:
+      - ./searxng:/etc/searxng
+    restart: always
   open-webui:
     build:
       context: .
@@ -10,19 +18,24 @@ services:
     volumes:
       - open-webui:/app/backend/data
     environment:
-      - DATA_DIR=/app/backend/data
-      - USE_OLLAMA=${USE_OLLAMA:-false}
-      - USE_CUDA=${USE_CUDA:-false}
-      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-/ollama}
-      - WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY:-Sup3r_S3cr3t_K3y}
-      # - DATABASE_URL=${DATABASE_URL:-sqlite:///${DATA_DIR}/webui.db}
-      - ENABLE_OPENAI_API=${ENABLE_OPENAI_API:-false}
-      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
-      - OPENAI_API_BASE_URL=${OPENAI_API_BASE_URL:-https://api.openai.com}
-      - ENABLE_SEARCH_QUERY=${ENABLE_SEARCH_QUERY:-false}
-      - SEARCH_ENGINE=${SEARCH_ENGINE:-searxng}
-      - SEARCH_ENGINE_URL=${SEARCH_ENGINE_URL:-http://searxng.local/search?q=<query>}
-      - NODE_OPTIONS=--max-old-space-size=4096
+      ENABLE_RAG_WEB_SEARCH: "True"
+      RAG_WEB_SEARCH_ENGINE: "searxng"
+      RAG_WEB_SEARCH_RESULT_COUNT: "3"
+      RAG_WEB_SEARCH_CONCURRENT_REQUESTS: "10"
+      SEARXNG_QUERY_URL: "http://searxng:8080/search?q=<query>"
+      DATA_DIR: /app/backend/data
+      USE_OLLAMA: ${USE_OLLAMA:-false}
+      USE_CUDA: ${USE_CUDA:-false}
+      OLLAMA_BASE_URL: ${OLLAMA_BASE_URL:-/ollama}
+      WEBUI_SECRET_KEY: ${WEBUI_SECRET_KEY:-Sup3r_S3cr3t_K3y}
+      DATABASE_URL: ${DATABASE_URL:-sqlite:///${DATA_DIR}/webui.db}
+      ENABLE_OPENAI_API: ${ENABLE_OPENAI_API:-false}
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
+      OPENAI_API_BASE_URL: ${OPENAI_API_BASE_URL:-https://api.openai.com}
+      ENABLE_SEARCH_QUERY: ${ENABLE_SEARCH_QUERY:-false}
+      SEARCH_ENGINE: ${SEARCH_ENGINE:-searxng}
+      SEARCH_ENGINE_URL: ${SEARCH_ENGINE_URL:-http://searxng.local/search?q=<query>}
+      NODE_OPTIONS: --max-old-space-size=4096
     extra_hosts:
       - host.docker.internal:host-gateway
 
