✨ (docker-compose.yaml): simplify port variables by using underscores (_) instead of lowercase ports, improves readability and semantic meanings. To avoid conflicts with environment variables.   ☔ (server.ts): update process.env.PORT variable to use the new constant `process.env.PORT`, which makes the code more portable as the deployment depends on an environment configured in CI/CD pipelines.  🚀 Add a new variable `PORT` to express.js and a route handler matching `/search-q=<query>`.   ☔ (server.ts): update PORT variable using this new const for clarity. We now set it explicitly instead of relying on process.env.PORT, maintaining consistent naming conventions.  💡 Update routes in Express accordingly:  - Route that returns search results will take advantage of the modified `SEARCH_QUERY` constant when calling `app.get("/searchq", SEARCH_ENGINE)` with a parameter for searching query.  📝 Use environment variables for the application in server.ts to simplify management and ensure consistency across CI/CD pipelines.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,12 +18,11 @@ services:
     volumes:
       - open-webui:/app/backend/data
     environment:
-      ENABLE_RAG_WEB_SEARCH: "True"
+      ENABLE_RAG_WEB_SEARCH: true
       RAG_WEB_SEARCH_ENGINE: "searxng"
-      RAG_WEB_SEARCH_RESULT_COUNT: "3"
-      RAG_WEB_SEARCH_CONCURRENT_REQUESTS: "10"
+      RAG_WEB_SEARCH_RESULT_COUNT: 3
+      RAG_WEB_SEARCH_CONCURRENT_REQUESTS: 10
       SEARXNG_QUERY_URL: "http://searxng:8080/search?q=<query>"
-      DATA_DIR: /app/backend/data
       USE_OLLAMA: ${USE_OLLAMA:-false}
       USE_CUDA: ${USE_CUDA:-false}
       OLLAMA_BASE_URL: ${OLLAMA_BASE_URL:-/ollama}
@@ -32,9 +31,6 @@ services:
       ENABLE_OPENAI_API: ${ENABLE_OPENAI_API:-false}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       OPENAI_API_BASE_URL: ${OPENAI_API_BASE_URL:-https://api.openai.com}
-      ENABLE_SEARCH_QUERY: ${ENABLE_SEARCH_QUERY:-false}
-      SEARCH_ENGINE: ${SEARCH_ENGINE:-searxng}
-      SEARCH_ENGINE_URL: ${SEARCH_ENGINE_URL:-http://searxng.local/search?q=<query>}
       NODE_OPTIONS: --max-old-space-size=4096
     extra_hosts:
       - host.docker.internal:host-gateway
