✨ (docker-compose.yml): improve readability by moving the network name "open-webui" to first line of this file   ✨ (docker-compose.yml): remove duplicate network name configuration as Open-WebUI is now a separate service name in our application dependencies.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     volumes:
       - ./searxng:/etc/searxng
     restart: always
+    networks:
+      - open-webui
   open-webui:
     build:
       context: .
@@ -35,6 +37,9 @@ services:
     extra_hosts:
       - host.docker.internal:host-gateway
 
+    networks:
+      - open-webui
+
     deploy:
       resources:
         limits:
@@ -44,3 +49,6 @@ services:
 
 volumes:
   open-webui: {}
+
+networks:
+  open-webui:
